Refactoring, added lombok, added mobile filter and refined filter json